--- a/src/app/hospital-bi-dashboard/grouped-bar-chart2/grouped-bar-chart2.component.html
+++ b/src/app/hospital-bi-dashboard/grouped-bar-chart2/grouped-bar-chart2.component.html
@@ -6,5 +6,6 @@
    [columns]="columnNames"
    [options]="options"
    [width]="width"
-   [height]="height">
+   [height]="height"
+   (select)="onSelect($event)">
 </google-chart>
