--- a/src/app/form-dashboard/cpr-form/cpr-form.component.html
+++ b/src/app/form-dashboard/cpr-form/cpr-form.component.html
@@ -606,6 +606,17 @@
         <hr>
         <div class="row mt-5">
             <table mat-table [dataSource]="CprFormsList_all" dir="rtl" style="width: 100%;" class="mat-elevation-z8">
+                <ng-container matColumnDef="delete">
+                    <th mat-header-cell *matHeaderCellDef> מחיקת טופס </th>
+                    <td mat-cell *matCellDef="let element"> <button mat-raised-button ml-2 type="submit"
+                            (click)="deleteForm(element.Row_ID)" class="btn btn-danger btn-raised mb-2"
+                            matTooltip="מחיקה">
+                            <span class="material-icons">
+                                delete
+                            </span>
+                        </button> </td>
+                </ng-container>
+
                 <ng-container matColumnDef="rowid">
                     <th mat-header-cell *matHeaderCellDef> מספר טופס </th>
                     <td mat-cell *matCellDef="let element"> {{element.Row_ID}} </td>
