--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -91,6 +91,10 @@
                 <mat-checkbox class="example-margin" (change)="changeSurgeryType()" formControlName="deliveryPremature">
                     מרפאות מיוחדות</mat-checkbox>
             </section>
+            <section class="example-section">
+                <mat-checkbox class="example-margin" (change)="changeSurgeryType()" formControlName="ByDoctor">
+                    לפי רופאים</mat-checkbox>
+            </section>
         </div>
     </div>
     <div class="row">
