--- a/src/app/form-dashboard/cpr-form/cpr-form.component.html
+++ b/src/app/form-dashboard/cpr-form/cpr-form.component.html
@@ -609,13 +609,13 @@
                 <ng-container matColumnDef="delete">
                     <th mat-header-cell *matHeaderCellDef> מחיקת טופס </th>
                     <td mat-cell *matCellDef="let element"> <button mat-raised-button ml-2 type="submit"
-                            (click)="deleteForm(element.Row_ID)" class="btn btn-danger btn-raised mb-2"
+                            (click)="deleteForm(element.Row_ID)" *ngIf="UserName == 'emansour' || UserName == 'kmassalha'" class="btn btn-danger btn-raised mb-2"
                             matTooltip="מחיקה">
                             <span class="material-icons">
                                 delete
                             </span>
                         </button> </td>
-                </ng-container>
+                </ng-container> 
 
                 <ng-container matColumnDef="rowid">
                     <th mat-header-cell *matHeaderCellDef> מספר טופס </th>
