update new born with dead option

--- a/src/app/medigate-servers/data-table/data-table.component.html
+++ b/src/app/medigate-servers/data-table/data-table.component.html
@@ -133,6 +133,7 @@
                 <tr
                     mat-row
                     *matRowDef="let row; columns: displayedColumns"
+                    (click)="getRecord(row)"
                 ></tr>
             </table>
         </div>
