--- a/src/app/new-born/new-born.component.html
+++ b/src/app/new-born/new-born.component.html
@@ -507,7 +507,9 @@
                             >&nbsp;&nbsp;
                             <mat-radio-button value="פגייה"
                                 >פגייה</mat-radio-button
-                            >&nbsp;&nbsp;
+                            >&nbsp;&nbsp;<mat-radio-button value="קבורה"
+                            >קבורה</mat-radio-button
+                        >&nbsp;&nbsp;
                         </mat-radio-group>
                     </div>
                 </div>
