--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -376,10 +376,9 @@
                     <mat-panel-title>
                         {{patient[0].Patient_DobGender}}
                     </mat-panel-title>
-                    <mat-panel-description>
-                        <span style="font-size: 22px;font-weight: bold;">{{patient[0].PatientName}}</span>
-                        <!-- <mat-icon>account_circle</mat-icon> -->
-
+                    <mat-panel-description style="justify-content: center;">
+                        <span style="font-size: 22px;font-weight: bold;margin-right: 15%;">{{patient[0].PatientName}}</span>
+                        <span style="font-size: 22px;font-weight: bold;">{{patient[0].Patient_CaseNumber}}</span>
                     </mat-panel-description>
                 </mat-expansion-panel-header>
                 <div class="row" style="justify-content: right;">
