--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -23,7 +23,7 @@
             <!-- <select class="form-select" style="margin-right: 26%;"
                 (change)="pie.refresh($event.target.value); bar.refresh($event.target.value); groupedbar.refresh($event.target.value); line.refresh($event.target.value);"> -->
 
-            <select class="form-select" (change)="changeTime($event.target.value,'all',[]);">
+            <select class="form-select" (change)="chooseTimeValue($event.target.value)">
                 <option *ngFor="let time of timeLine" [value]="time.DimTimeTypeID">{{time.DimTimeTypeDesc}}
                 </option>
             </select>
@@ -241,22 +241,29 @@
             <ng-container matColumnDef="doctor">
                 <th mat-header-cell *matHeaderCellDef> שם רופא
                 </th>
-                <td mat-cell *matCellDef="let element"> doc </td>
+                <td mat-cell *matCellDef="let element"> {{ element.DoctorName }} </td>
             </ng-container>
 
             <ng-container matColumnDef="department">
                 <th mat-header-cell *matHeaderCellDef> מחלקה </th>
-                <td mat-cell *matCellDef="let element"> depart </td>
+                <td mat-cell *matCellDef="let element"> {{ element.DepartmentName }} </td>
             </ng-container>
 
             <ng-container matColumnDef="quantity">
-                <th mat-header-cell *matHeaderCellDef> כמות
+                <th mat-header-cell *matHeaderCellDef> ביקורים
                 </th>
-                <td mat-cell *matCellDef="let element"> quantity </td>
+                <td mat-cell *matCellDef="let element"> {{ element.Q }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef> פעולות
+                </th>
+                <td mat-cell *matCellDef="let element"> {{ element.Actions }} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row">
             </tr>
         </table>
+        <mat-paginator [pageSizeOptions]="[15,35,70,100]" showFirstLastButtons></mat-paginator>
     </div>
 </div>
