--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -90,7 +90,7 @@
                 <mat-checkbox class="example-margin" (change)="changeSurgeryType()" formControlName="deliveryPremature">
                     מרפאות מיוחדות</mat-checkbox>
             </section>
-            <section class="example-section" *ngIf="UserName == 'adahabre'">
+            <section class="example-section">
                 <mat-checkbox class="example-margin" (change)="changeSurgeryType()" formControlName="ByDoctor">
                     לפי רופאים</mat-checkbox>
             </section>
