--- a/src/app/hospital-bi-dashboard/bar-chart/bar-chart.component.html
+++ b/src/app/hospital-bi-dashboard/bar-chart/bar-chart.component.html
@@ -1,5 +1,5 @@
 <mat-spinner *ngIf="loader"></mat-spinner>
 <google-chart #chart *ngIf="!loader" [type]="type" [data]="data" [options]="options" [columns]="columnNames"
    [width]="width" [height]="height"
-   (select)="onSelect($event)">
+   (select)="onSelect($event); sendToParent($event);">
 </google-chart>
