--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -246,7 +246,7 @@
                         </mat-radio-group>
                     </div>
                 </div>
-                <app-grouped-bar-chart #groupedbar (newItemEvent)="changeDepartInModal($event)" (secondItemEvent)="getUniversalVal($event)" [filterValue]="filterValue" [filterValue]="filterValue"></app-grouped-bar-chart>
+                <app-grouped-bar-chart #groupedbar (newItemEvent)="changeDepartInModal($event)" (secondItemEvent)="getUniversalVal($event)" [filterValue]="filterValue"></app-grouped-bar-chart>
             </div>
         </div>
     </div>
