--- a/src/app/form-dashboard/cpr-form/cpr-form.component.html
+++ b/src/app/form-dashboard/cpr-form/cpr-form.component.html
@@ -264,7 +264,7 @@
             <div class="header">
                 <p class="text-right"><b><u>ב) תהליך החייאה:</u></b></p>
                 <button mat-raised-button ml-2 type="submit" *ngIf="UserName == 'adahabre'" class="btn btn-primary btn-raised mb-2"
-                (click)="openAdditionalTables()" matTooltip="המשך">
+                (click)="openAdditionalTables()" matTooltip="עוד טבלאות">
                     <span class="material-icons">
                         add
                     </span>
