--- a/src/app/form-dashboard/cpr-form/additional-cpr-tables/additional-cpr-tables.component.html
+++ b/src/app/form-dashboard/cpr-form/additional-cpr-tables/additional-cpr-tables.component.html
@@ -95,6 +95,6 @@
 <div class="row" style="justify-content: center;">
     <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: white;" color="primary"
         (click)="submit()" type="submit" mat-raised-button>
-        <span>שמירת טופס</span>
+        <span>שמירה</span>
     </button>
 </div>
