--- a/src/styles.css
+++ b/src/styles.css
@@ -143,6 +143,11 @@ textarea{
     text-align: right;
     font-size: larger !important;
 }
+.mat-tooltip{
+    direction: ltr  !important;
+    text-align: right  !important;
+    max-width: 600px !important;
+}
 .mat-form-field-appearance-fill .mat-form-field-flex {
     border-radius: 4px 4px 0 0;
     padding: 0.1em 0.1em 0 0.1em;
