--- a/src/app/form-dashboard/cpr-form/additional-cpr-tables/additional-cpr-tables.component.html
+++ b/src/app/form-dashboard/cpr-form/additional-cpr-tables/additional-cpr-tables.component.html
@@ -93,8 +93,12 @@
     </div>
 </div>
 <div class="row" style="justify-content: center;">
-    <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: white;" color="primary"
+    <button class="mb-5" style="font-weight: bold;font-size: 20px;color: white;margin: auto;width: 46%;" color="primary"
         (click)="submit()" type="submit" mat-raised-button>
         <span>שמירה</span>
+    </button>
+    <button class="mb-5" style="font-weight: bold;font-size: 20px;color: white;margin: auto;width: 46%;" color="warn"
+        (click)="closeModal()" type="submit" mat-raised-button>
+        <span>ביטול</span>
     </button>
 </div>
