--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -176,7 +176,7 @@
                         </option>
                     </select>
                 </div>
-                <app-bar-chart #bar (newItemEvent)="changeDepartInModal($event)" (secondItemEvent)="getUniversalVal($event)" [filterValue]="filterValue"></app-bar-chart>
+                <app-bar-chart #bar (newItemEvent)="changeDepartInModal($event)" [filterValue]="filterValue"></app-bar-chart>
             </div>
         </div>
         <!-- <div class="row section" dir="rtl">
@@ -202,7 +202,7 @@
                         </option>
                     </select>
                 </div>
-                <app-grouped-bar-chart2 #group2 (newItemEvent)="changeDepartInModal($event)" (secondItemEvent)="getUniversalVal($event)" [filterValue]="filterValue"></app-grouped-bar-chart2>
+                <app-grouped-bar-chart2 #group2 (newItemEvent)="changeDepartInModal($event)" [filterValue]="filterValue"></app-grouped-bar-chart2>
             </div>
         </div>
         <div class="row section" dir="rtl"
@@ -246,7 +246,7 @@
                         </mat-radio-group>
                     </div>
                 </div>
-                <app-grouped-bar-chart #groupedbar (newItemEvent)="changeDepartInModal($event)" (secondItemEvent)="getUniversalVal($event)" [filterValue]="filterValue"></app-grouped-bar-chart>
+                <app-grouped-bar-chart #groupedbar (newItemEvent)="changeDepartInModal($event)" [filterValue]="filterValue"></app-grouped-bar-chart>
             </div>
         </div>
     </div>
